@@ -2,7 +2,7 @@ AC_INIT(QRencode)
 
 MAJOR_VERSION=1
 MINOR_VERSION=0
-MICRO_VERSION=0
+MICRO_VERSION=1
 VERSION=$MAJOR_VERSION.$MINOR_VERSION.$MICRO_VERSION
 AC_SUBST(MAJOR_VERSION)
 AC_SUBST(MINOR_VERSION)
@@ -24,7 +24,7 @@ AC_HEADER_STDC
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
-
+PKG_PROG_PKG_CONFIG
 
 SDL_REQUIRED_VERSION=1.2.0
 AM_PATH_SDL($SDL_REQUIRED_VERSION,,AC_MSG_WARN([*** SDL $SDL_REQUIRED_VERSION or better is required.]))
@@ -38,7 +38,7 @@ AC_ARG_WITH([tools], [AC_HELP_STRING([--with-tools], [build utility tools [defau
  [], [build_tools=yes])
 
 if test x$build_tools = xyes ; then
-	AM_PATH_LIBPNG
+	PKG_CHECK_MODULES(png, "libpng12")
 fi
 AM_CONDITIONAL(BUILD_TOOLS, [test "x$build_tools" = "xyes" ])
 
